fixed scrollbar HomePage

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,11 @@
+.home-page {
+  margin-top: 48px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left : 0;
+  right : 0;
+}
 .illustration {
   max-width: 100%;
 }
@@ -37,6 +45,9 @@
   left: 10%;
 }
 @media only screen and (min-width:768px) {
+  .home-page {
+    margin-top: 53px;
+  }
   .text {
     max-width: 40%;
 
